# amr

./: .gitignore  .merlin  META  Makefile  README.md  _tags  amr.opam  dune-project  opam
amr/: amr.opam  dune-project
amr/lib/: amr.ml  amr_ast.ml  amr_parser.mly  dune
lib/: amr.ml  amr.mli  amr_ast.ml  amr_ast.mli  amr_lexer.ml  amr_lexer.mll  amr_parser.mly  dune
opam/: descr  opam
src/: amr_lexer.mll  amr_lib.ml  amr_lib.mli  amr_parser.mly  amr_types.ml  amr_types.mli  libamr.ml  libamr.mli
test/: README.md  amr_test.ml  dune  one.amr  penman_ex.amr  test_amr.4.txt
