(lang dune 3.4)

(name amr)

(using menhir 2.0)

(generate_opam_files true)

(source
 (github grew-nlp/amr))

(authors "Bruno Guillaume")

(maintainers "Bruno Guillaume")

(license CeCILL)

(documentation https://github.com/grew-nlp/amr)

(package
 (name amr)
 (synopsis "Parsing of Abstract Meaning Representation corpora")
 (description "This library was built to be used by Grew to deal with AMR corpora")
 (depends ocaml dune)
 (tags
  ("nlp" "Abstract Meaning Representation")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
